--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'dagger.hilt.android.plugin'
     id 'kotlinx-serialization'
     id 'androidx.navigation.safeargs.kotlin'
 }
@@ -68,13 +67,10 @@ dependencies {
     // KotlinX Serialization
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0"
 
-    // DataStore Preferences
-    implementation("androidx.datastore:datastore-preferences:1.0.0")
-
-    // Dagger - Hilt
-    implementation "com.google.dagger:hilt-android:2.40.2"
-    kapt "com.google.dagger:hilt-android-compiler:2.38.1"
-    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+    //Dagger 2
+    def dagger2Version = "2.40.2"
+    implementation "com.google.dagger:dagger:$dagger2Version"
+    kapt("com.google.dagger:dagger-compiler:$dagger2Version")
 
     // Coil
     def coilVersion = "1.4.0"
