--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,11 @@ android {
         viewBinding true
         dataBinding true
     }
+    testOptions{
+        unitTests.all{
+            useJUnitPlatform()
+        }
+    }
 }
 
 dependencies {
@@ -44,9 +49,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'androidx.test.ext:junit-ktx:1.1.3'
 
     // Room components
     def roomVersion = "2.4.1"
@@ -82,6 +85,25 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
 
+    //SwipyRefreshLayout
     implementation 'com.github.omadahealth:swipy:1.2.3@aar'
+
+    //ViewBindingPropertyDelegate
     implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.3'
+
+    testImplementation "org.junit.jupiter:junit-jupiter:5.6.2"
+    testImplementation "io.mockk:mockk:1.12.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:1.6.10"
+
+    androidTestImplementation "org.jetbrains.kotlin:kotlin-test-junit:1.6.10"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
+    androidTestImplementation "org.junit.jupiter:junit-jupiter:5.6.2"
+    androidTestImplementation "io.mockk:mockk:1.12.0"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "androidx.test:runner:1.4.0"
+    androidTestImplementation "androidx.test:rules:1.4.0"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+
 }
